// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> renders correctly when logged in 1`] = `
<div
  className="App"
>
  <Connect(Header) />
  <div
    className="App__content"
  >
    <Connect(Drawer) />
    <Switch>
      <Route
        exact={true}
        path="/"
        render={[Function]}
      />
      <Route
        path="/drafts"
        render={[Function]}
      />
      <Route
        path="/inbox"
        render={[Function]}
      />
      <Route
        path="/sent"
        render={[Function]}
      />
      <Route
        path="/spam"
        render={[Function]}
      />
      <Route
        path="/trash"
        render={[Function]}
      />
      <Route
        render={[Function]}
      />
    </Switch>
  </div>
</div>
`;

exports[`<App /> renders correctly when logged in and loading emails 1`] = `
<div
  className="App"
>
  <LoadingOverlay
    fadeOutSpeed={1000}
    loadingOverlayState="VISIBLE"
  />
  <Connect(Header) />
  <div
    className="App__content"
  >
    <Connect(Drawer) />
    <Switch>
      <Route
        exact={true}
        path="/"
        render={[Function]}
      />
      <Route
        path="/drafts"
        render={[Function]}
      />
      <Route
        path="/inbox"
        render={[Function]}
      />
      <Route
        path="/sent"
        render={[Function]}
      />
      <Route
        path="/spam"
        render={[Function]}
      />
      <Route
        path="/trash"
        render={[Function]}
      />
      <Route
        render={[Function]}
      />
    </Switch>
  </div>
</div>
`;

exports[`<App /> renders correctly when not logged in 1`] = `
<div
  className="App"
>
  Logging in, please wait...
</div>
`;
